[package]
name = "steel-pty"
version = "0.1.0"
edition = "2021"


[lib]
name = "steel_pty"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
portable-pty = "0.8.1"
# steel-core = { path = "/home/matt/Documents/steel/crates/steel-core", features = ["dylibs"] }
steel-core = { git = "https://github.com/mattwparas/steel.git", version = "0.6.0", features = ["anyhow", "dylibs"] }
abi_stable = "0.11.1"
futures = "0.3.26"
tokio = { version = "1.29.1", features = ["sync"]}
log = "0.4.17"
anyhow = "*"
wezterm-term = { git = "https://github.com/mattwparas/wezterm.git", branch = "mwp-public-scroll" }
config = { git = "https://github.com/mattwparas/wezterm.git", branch = "mwp-public-scroll" }
parking_lot = "*"
futures-time = "3.0.0"
termwiz = { git = "https://github.com/mattwparas/wezterm.git", branch = "mwp-public-scroll" }
